--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,6 +35,8 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
+            <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
+<dotlottie-wc src="https://lottie.host/91904867-6144-4f51-b3b2-34f41b37f8f4/HTIeBdaGsH.lottie" speed="1" style="width: 100%; height: 120px" mode="forward" loop autoplay></dotlottie-wc>
       Let's <span class="hidden xl:inline">.</span>
       <span class="text-accent dark:text-white"> .</span> Staking
     </Fragment>
