--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
+   <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=68cf42114dbbf636c5c258cc&product=sop' async='async'></script>
   <!-- Hero Widget ******************* -->
 
   <Hero
