--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,8 @@ const metadata = {
       >
       <script defer src="https://www.livecoinwatch.com/static/lcw-widget.js"></script> <div class="livecoinwatch-widget-5" lcw-base="USD" lcw-color-tx="#0693e3" lcw-marquee-1="coins" lcw-marquee-2="movers" lcw-marquee-items="30" ></div>
        <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script><dotlottie-player src="https://lottie.host/c5709a91-d67c-4543-9eae-c80890ec1c69/Tnn7iXcj7z.lottie" background="transparent" speed="1" style="width: 100%; height: 500px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-      Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
-      Blogs.
+      <span class="block mb-1 sm:hidden font-bold text-White-600">Less Risk. More Rewards.</span>
+    Explore over 30 established and emerging protocols that offer staking rewards. With Figment, you’re not just staking, you’re investing in the future and growth of blockchain ecosystems while securing your digital assets.
     </Fragment>
   </Hero>
 
