--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">A</span> is 
+        <span class="font-semibold">Less Risk</span> More Rewards
         </span
        
       >
