--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -4,12 +4,12 @@
 
 @layer utilities {
   .bg-page {
-    background-color: var(--aw-color-bg-page-);
+    background-color: var(--aw-color-bg-page-dark);
   }
   .bg-dark {
     background-color: var(--aw-color-bg-page-dark);
   }
-  .bg-dark {
+  .bg-light {
     background-color: var(--aw-color-bg-page-dark);
   }
   .text-page {
