--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -43,12 +43,11 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-      Step into the spotlight with <span class="font-semibold">Astrowind</span> templates, your pathway to fortifying your
-      startup's digital footprint, fostering credibility, and expanding your reach.
+      . <span class="font-semibold">.</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
-      <YouTube id="gxBkghlglTg" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <YouTube id="UCPUASjKlIA02UEmcCPMlHSA" title="Staking Platform" />
       <style is:inline>
         lite-youtube {
           margin: 0 auto;
