--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -19,7 +19,6 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-  <script type="text/javascript" src="https://widgets.rubic.exchange/iframe/bundle.new-app.min.js"></script>
   <!-- Hero Widget ******************* -->
 
   <Hero
@@ -36,18 +35,18 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-      <div id="rubic-widget-root"></div>
       Improve <span class="hidden sm:inline">the online presence of</span> your <span
         class="text-accent dark:text-white">Startup</span
       > with Astrowind templates
     </Fragment>
 
     <Fragment slot="subtitle">
-      . <span class="font-semibold">.</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
+      Step into the spotlight with <span class="font-semibold">Astrowind</span> templates, your pathway to fortifying your
+      startup's digital footprint, fostering credibility, and expanding your reach.
     </Fragment>
 
     <Fragment slot="image">
-      <YouTube id="UCPUASjKlIA02UEmcCPMlHSA" title="Staking Platform" />
+      <YouTube id="gxBkghlglTg" title="Astro just Launched.... Could it be the ultimate web framework?" />
       <style is:inline>
         lite-youtube {
           margin: 0 auto;
@@ -315,36 +314,4 @@ const metadata = {
       impact.
     </Fragment>
   </CallToAction>
-  <script defer type="text/javascript">
-    // describe widget configuration and saving to a global variable for future use
-    var configuration = {
-        from: 'ETH',
-        to: 'RBC',
-        fromChain: 'ETH',
-        toChain: 'ETH',
-        amount: 1,
-        iframe: 'flex',
-        hideSelectionFrom: false,
-        hideSelectionTo: true,
-        useLargeIframe: false,
-        hideBranding: false,
-        hideUnusedUi: false,
-        theme: 'dark',
-        injectTokens: {
-            eth: ['0xd123575d94a7ad9bff3ad037ae9d4d52f41a7518']
-        },
-        slippagePercent: {
-            instantTrades: 2,
-            crossChain: 5
-        },
-        crossChainIntegratorAddress: '<Your integrator address>',
-        onChainIntegratorAddress: '<Your integrator address>'
-    }
-
-    // prevent accidental changes to the object, for example, when re-creating a widget for another theme
-    Object.freeze(configuration);
-
-    // create widget
-    rubicWidget.init(configuration);
-</script>
 </Layout>
