--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -14,7 +14,7 @@ import Brands from '~/components/widgets/Brands.astro';
 import { YouTube } from 'astro-embed';
 
 const metadata = {
-  title: 'Startup Landing Page',
+  title: 'Basic of Staking',
 };
 ---
 
@@ -22,7 +22,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Startup Web Demo"
+    tagline="Staking Protocols"
     actions={[
       {
         variant: 'primary',
@@ -35,14 +35,13 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-      Improve <span class="hidden sm:inline">the online presence of</span> your <span
-        class="text-accent dark:text-white">Startup</span
-      > with Astrowind templates
+      Protocol <span class="hidden sm:inline">,</span> , <span
+        class="text-accent dark:text-white">,</span
+      > Staking
     </Fragment>
 
     <Fragment slot="subtitle">
-      Step into the spotlight with <span class="font-semibold">Astrowind</span> templates, your pathway to fortifying your
-      startup's digital footprint, fostering credibility, and expanding your reach.
+      ,<span class="font-semibold"> ,</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
