--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -29,19 +29,19 @@ const metadata = {
         target: '_blank',
         text: 'APP STAKING',
         href: 'https://linktr.ee/reystaking',
-        icon: 'tabler:download',
+        icon: 'tabler:brand-storj',
       },
-      { text: 'BUY COIN', href: '/buy' },
+      { text: 'REY SHOP', href: 'https://linktr.ee/reystaking' },
     ]}
   >
     <Fragment slot="title">
-      . <span class="hidden sm:inline">,</span> , <span
+       <span class="hidden sm:inline"></span>  <span
         class="text-accent dark:text-white">Protocol Staking</span
-      > .
+      > 
     </Fragment>
 
     <Fragment slot="subtitle">
-      ,<span class="font-semibold"> ,</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
+      <span class="font-semibold"> </span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
