--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -22,41 +22,44 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline=""
+    tagline="Staking Protocols"
     actions={[
       {
         variant: 'primary',
         target: '_blank',
         text: 'APP STAKING',
         href: 'https://linktr.ee/reystaking',
-        icon: 'tabler:brand-storj',
+        icon: 'tabler:download',
       },
-      { text: 'REY SHOP', href: 'https://linktr.ee/reystaking' },
+      { text: 'REY SHOP', href: '#features' },
     ]}
   >
     <Fragment slot="title">
-       <span class="hidden sm:inline"></span>  <span
-        class="text-accent dark:text-white">Protocol Staking</span
-      > 
+      Protocol <span class="hidden sm:inline"> </span> <span
+        class="text-accent dark:text-white"></span
+      > Staking
     </Fragment>
 
     <Fragment slot="subtitle">
-      <span class="font-semibold"> </span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
+      <span class="font-semibold"> ,</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
-  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 400px" mode="forward" loop autoplay></dotlottie-wc>
+      <YouTube id="UChBQffEETgDQ_g2U7ZS_Dzw" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <style is:inline>
+        lite-youtube {
+          margin: 0 auto;
+          max-width: 100%;
+        }
+      </style>
     </Fragment>
   </Hero>
 
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="What is Staking?"
-    subtitle="Protocol staking is a process in which users can earn rewards by holding and “staking” their tokens in a blockchain network. Staking helps decentralize and maintain the health of the network. Staking provides a steady stream of rewards, independent of underlying token prices. 
-
-Offering unique benefits when compared to investment product alternatives such as lending, buy-and-hold, and other methods, staking allows token holders to have the opportunity to grow their position without buying additional tokens. ."
+    title="About us"
+    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
@@ -310,11 +313,4 @@ Offering unique benefits when compared to investment product alternatives such a
       impact.
     </Fragment>
   </CallToAction>
-   <script>
-  (function(){var w=window;if(w.ChannelIO){return w.console.error("ChannelIO script included twice.");}var ch=function(){ch.c(arguments);};ch.q=[];ch.c=function(args){ch.q.push(args);};w.ChannelIO=ch;function l(){if(w.ChannelIOInitialized){return;}w.ChannelIOInitialized=true;var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.channel.io/plugin/ch-plugin-web.js";var x=document.getElementsByTagName("script")[0];if(x.parentNode){x.parentNode.insertBefore(s,x);}}if(document.readyState==="complete"){l();}else{w.addEventListener("DOMContentLoaded",l);w.addEventListener("load",l);}})();
-
-  ChannelIO('boot', {
-    "pluginKey": "a8344e9b-518e-4fee-a6bc-03de316c2c1b"
-  });
-</script>
 </Layout>
