--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -45,21 +45,18 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="image">
-      <YouTube id="UChBQffEETgDQ_g2U7ZS_Dzw" title="Astro just Launched.... Could it be the ultimate web framework?" />
-      <style is:inline>
-        lite-youtube {
-          margin: 0 auto;
-          max-width: 100%;
-        }
-      </style>
+     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
+<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 300px" mode="forward" loop autoplay></dotlottie-wc>
     </Fragment>
   </Hero>
 
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="About us"
-    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
+    title="What is Staking?"
+    subtitle="Protocol staking is a process in which users can earn rewards by holding and “staking” their tokens in a blockchain network. Staking helps decentralize and maintain the health of the network. Staking provides a steady stream of rewards, independent of underlying token prices. 
+
+Offering unique benefits when compared to investment product alternatives such as lending, buy-and-hold, and other methods, staking allows token holders to have the opportunity to grow their position without buying additional tokens. "
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
