--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -27,11 +27,11 @@ const metadata = {
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
-        href: 'https://github.com/arthelokyo/astrowind',
+        text: 'APP STAKING',
+        href: 'https://linktr.ee/reystaking',
         icon: 'tabler:download',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'REY SHOP', href: '#features' },
     ]}
   >
     <Fragment slot="title">
