--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -46,14 +46,14 @@ const metadata = {
 
     <Fragment slot="image">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/75d64c2f-d754-4977-94d5-33a1c2034523/pLy1crxx8y.lottie" speed="0.5" style="width: 100%; height: 300px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 360px" mode="forward" loop autoplay></dotlottie-wc>
     </Fragment>
   </Hero>
 
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="About us"
+    title="What is Staking?"
     subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
   >
     <Fragment slot="bg">
