--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -22,22 +22,22 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Staking Protocols"
+    tagline=""
     actions={[
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
-        href: 'https://github.com/arthelokyo/astrowind',
+        text: 'APP STAKING',
+        href: 'https://linktr.ee/reystaking',
         icon: 'tabler:download',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'REY SHOP', href: 'https://linktr.ee/reystaking' },
     ]}
   >
     <Fragment slot="title">
-      Protocol <span class="hidden sm:inline">,</span> , <span
-        class="text-accent dark:text-white">,</span
-      > Staking
+       <span class="hidden sm:inline"></span>  <span
+        class="text-accent dark:text-white">Protocol Staking</span
+      > 
     </Fragment>
 
     <Fragment slot="subtitle">
@@ -54,7 +54,7 @@ const metadata = {
 
   <Features2
     title="What is Staking?"
-    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
+    subtitle=" Protocol staking is a process in which users can earn rewards by holding and “staking” their tokens in a blockchain network. Staking helps decentralize and maintain the health of the network. Staking provides a steady stream of rewards, independent of underlying token prices."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
