--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -29,7 +29,7 @@ const metadata = {
         target: '_blank',
         text: 'APP STAKING',
         href: 'https://linktr.ee/reystaking',
-        icon: 'tabler:download',
+        icon: 'tabler:clock-bitcoin',
       },
       { text: 'REY SHOP', href: 'https://linktr.ee/reystaking' },
     ]}
@@ -41,7 +41,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-      ,<span class="font-semibold"> ,</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
+      <span class="font-semibold"> </span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
