--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -64,8 +64,10 @@ const metadata = {
   <!-- Stats Widget ****************** -->
 
   <Stats
-    title="Discover the impressive impact of Astrowind"
-    subtitle="The numbers below reflect the trust our users have placed in us and the remarkable outcomes we've helped them achieve."
+    title="Why Stake?"
+    subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network.
+
+Staking offers unique benefits when compared to alternatives such as lending, buy-and-hold, and others. Token holders have the opportunity to grow their position without buying additional tokens."
     stats={[
       { title: 'Downloads', amount: '182K' },
       { title: 'Websites Launched', amount: '87' },
