--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -65,9 +65,7 @@ const metadata = {
 
   <Stats
     title="Why Stake?"
-    subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network.
-
-Staking offers unique benefits when compared to alternatives such as lending, buy-and-hold, and others. Token holders have the opportunity to grow their position without buying additional tokens."
+    subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network."
     stats={[
       { title: 'Downloads', amount: '182K' },
       { title: 'Websites Launched', amount: '87' },
