--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -22,39 +22,44 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline=""
+    tagline="Staking Protocols"
     actions={[
       {
         variant: 'primary',
         target: '_blank',
         text: 'APP STAKING',
         href: 'https://linktr.ee/reystaking',
-        icon: 'tabler:clock-bitcoin',
+        icon: 'tabler:download',
       },
-      { text: 'REY SHOP', href: 'https://linktr.ee/reystaking' },
+      { text: 'REY SHOP', href: '#features' },
     ]}
   >
     <Fragment slot="title">
-       <span class="hidden sm:inline"></span>  <span
-        class="text-accent dark:text-white">Protocol Staking</span
-      > 
+      Protocol <span class="hidden sm:inline">,</span> , <span
+        class="text-accent dark:text-white">,</span
+      > Staking
     </Fragment>
 
     <Fragment slot="subtitle">
-      <span class="font-semibold"> </span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
+      ,<span class="font-semibold"> ,</span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
-      <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 360px" mode="forward" loop autoplay></dotlottie-wc>
+      <YouTube id="UChBQffEETgDQ_g2U7ZS_Dzw" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <style is:inline>
+        lite-youtube {
+          margin: 0 auto;
+          max-width: 100%;
+        }
+      </style>
     </Fragment>
   </Hero>
 
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="What is Staking?"
-    subtitle=" Protocol staking is a process in which users can earn rewards by holding and “staking” their tokens in a blockchain network. Staking helps decentralize and maintain the health of the network. Staking provides a steady stream of rewards, independent of underlying token prices."
+    title="About us"
+    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
@@ -64,8 +69,8 @@ const metadata = {
   <!-- Stats Widget ****************** -->
 
   <Stats
-    title="Why Stake?"
-    subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network."
+    title="Discover the impressive impact of Astrowind"
+    subtitle="The numbers below reflect the trust our users have placed in us and the remarkable outcomes we've helped them achieve."
     stats={[
       { title: 'Downloads', amount: '182K' },
       { title: 'Websites Launched', amount: '87' },
