--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -35,7 +35,7 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-       <span class="hidden sm:inline">,</span> , <span
+       <span class="hidden sm:inline"> </span> <span
         class="text-accent dark:text-white">Protocol Staking</span
       > 
     </Fragment>
@@ -54,7 +54,7 @@ const metadata = {
 
   <Features2
     title="What is Staking"
-    subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
+    subtitle=" Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
