--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -65,7 +65,7 @@ const metadata = {
 
   <Stats
     title="Why Stake?"
-    subtitle="The numbers below reflect the trust our users have placed in us and the remarkable outcomes we've helped them achieve."
+    subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network."
     stats={[
       { title: 'Downloads', amount: '182K' },
       { title: 'Websites Launched', amount: '87' },
