--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -75,107 +75,50 @@ const metadata = {
     ]}
   />
 
- 
-
- 
-
-  <!-- Features Widget *************** -->
+ <!-- Features Widget *************** -->
 
   <Features
     id="features"
     title="Who is Staking For?"
-    subtitle="Possess several key characteristics to effectively cater to the needs of startups and entrepreneurs."
+    subtitle=" Rey.Fan Supports Established & Emerging Protocols."
     columns={3}
     items={[
       {
-        title: 'Modern and Professional Design',
+        title: 'Asset Managers',
         description:
           'Have a contemporary design that reflects current design trends and gives a professional impression.',
         icon: 'tabler:artboard',
       },
       {
-        title: 'Responsive and Mobile-Friendly',
+        title: 'Marketplaces & Exchanges',
         description: 'Adapt seamlessly to different screen sizes and devices to ensure a consistent experience.',
         icon: 'tabler:picture-in-picture',
       },
       {
-        title: 'Customizability',
+        title: 'Custodians & Wallets',
         description:
           'Easily customizable, allowing users to adapt the design, colors, typography, and content to match their brand identity.',
         icon: 'tabler:adjustments-horizontal',
       },
       {
-        title: 'Fast Loading Times',
+        title: 'Fund Products',
         description: 'Optimized for speed to ensure a smooth user experience and favorable search engine rankings.',
         icon: 'tabler:rocket',
       },
       {
-        title: 'Search Engine Optimization (SEO)',
+        title: 'Foundations',
         description:
           'Incorporate SEO best practices in template structure and code to improve visibility in search engine results.',
         icon: 'tabler:arrows-right-left',
       },
       {
-        title: 'Compatibility',
+        title: 'Data Platforms',
         description: 'The templates work seamlessly across various content management systems and website builders.',
         icon: 'tabler:plug-connected',
       },
     ]}
   />
-
-  
-
-  <!-- Features3 Widget ************** -->
-
-  <Features3
-    title="Let us know how we can help"
-    subtitle="We’re here to help and answer any question you might have."
-    columns={4}
-    items={[
-      {
-        title: 'Phone',
-        icon: 'tabler:phone',
-        callToAction: {
-          target: '_blank',
-          text: 'Call us',
-          href: '/',
-          variant: 'link',
-        },
-      },
-      {
-        title: 'Email',
-        icon: 'tabler:mail',
-        callToAction: {
-          target: '_blank',
-          text: 'Write to us',
-          href: '/',
-          variant: 'link',
-        },
-      },
-      {
-        title: 'Chat with sales',
-        icon: 'tabler:message-circle',
-        callToAction: {
-          target: '_blank',
-          text: 'Start chatting',
-          href: '/',
-          variant: 'link',
-        },
-      },
-      {
-        title: 'Chat with support',
-        icon: 'tabler:message-circle',
-        callToAction: {
-          target: '_blank',
-          text: 'Start chatting',
-          href: '/',
-          variant: 'link',
-        },
-      },
-    ]}
-  />
-
-  <!-- CallToAction Widget *********** -->
+ <!-- CallToAction Widget *********** -->
 
   <CallToAction
     actions={[
