--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -85,34 +85,32 @@ const metadata = {
       {
         title: 'Asset Managers',
         description:
-          'Have a contemporary design that reflects current design trends and gives a professional impression.',
+          ' Rey.Fan tailored staking strategies offer unparalleled reward opportunities for asset managers.',
         icon: 'tabler:artboard',
       },
       {
         title: 'Marketplaces & Exchanges',
-        description: 'Adapt seamlessly to different screen sizes and devices to ensure a consistent experience.',
+        description: ' Provide your users with frictionless staking, earn rewards, for marketplaces and exchanges.',
         icon: 'tabler:picture-in-picture',
       },
       {
         title: 'Custodians & Wallets',
         description:
-          'Easily customizable, allowing users to adapt the design, colors, typography, and content to match their brand identity.',
-        icon: 'tabler:adjustments-horizontal',
+          'enables custodians and wallets to integrate staking solutions across established and emerging Proof-of-Stake.',
       },
       {
         title: 'Fund Products',
-        description: 'Optimized for speed to ensure a smooth user experience and favorable search engine rankings.',
+        description: 'Create digital asset fund products underpinned by comprehensive on-chain data sets.',
         icon: 'tabler:rocket',
       },
       {
         title: 'Foundations',
         description:
-          'Incorporate SEO best practices in template structure and code to improve visibility in search engine results.',
-        icon: 'tabler:arrows-right-left',
+          'Rey.Fan expertise to launch your protocol and manage your treasury with strategic guidance and support .',
       },
       {
         title: 'Data Platforms',
-        description: 'The templates work seamlessly across various content management systems and website builders.',
+        description: 'Expand your data offering with Rey.Fan, providing your users a quantitative edge in a growing asset.',
         icon: 'tabler:plug-connected',
       },
     ]}
