--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -107,6 +107,7 @@ const metadata = {
         title: 'Foundations',
         description:
           'Rey.Fan expertise to launch your protocol and manage your treasury with strategic guidance and support .',
+          icon: 'tabler:fountain',
       },
       {
         title: 'Data Platforms',
