--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -112,7 +112,7 @@ const metadata = {
       {
         title: 'Data Platforms',
         description: 'Expand your data offering with Rey.Fan, providing your users a quantitative edge in a growing asset.',
-        icon: 'tabler:plug-connected',
+        icon: 'tabler:database-export',
       },
     ]}
   />
