--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -49,7 +49,7 @@ const metadata = {
 
     <Fragment slot="image">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 360px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 300px" mode="forward" loop autoplay></dotlottie-wc>
     </Fragment>
   </Hero>
 
@@ -86,7 +86,7 @@ const metadata = {
         title: 'Asset Managers',
         description:
           ' Rey.Fan tailored staking strategies offer unparalleled reward opportunities for asset managers.',
-        icon: 'tabler:artboard',
+        icon: 'tabler:tax',
       },
       {
         title: 'Marketplaces & Exchanges',
