--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -49,7 +49,7 @@ const metadata = {
 
     <Fragment slot="image">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 300px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 4200px" mode="forward" loop autoplay></dotlottie-wc>
     </Fragment>
   </Hero>
 
@@ -89,9 +89,9 @@ const metadata = {
         icon: 'tabler:tax',
       },
       {
-        title: 'Marketplaces & Exchanges',
+        title: 'Marketplaces',
         description: ' Provide your users with frictionless staking, earn rewards, for marketplaces and exchanges.',
-        icon: 'tabler:picture-in-picture',
+        icon: 'tabler:preplace',
       },
       {
         title: 'Custodians & Wallets',
