--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -43,13 +43,13 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/15a89522-e2b2-486a-9e0f-3ca78c45dd93/P2CytOB6KU.lottie" speed="0.2" style="width: 100%; height: 50px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/15a89522-e2b2-486a-9e0f-3ca78c45dd93/P2CytOB6KU.lottie" speed="0.3" style="width: 100%; height: 100px" mode="forward" loop autoplay></dotlottie-wc>
       <span class="font-semibold"> </span> Staking is a process in which token holders can earn rewards by helping to secure a blockchain network. Watch the video to learn more about how staking works.
     </Fragment>
 
     <Fragment slot="image">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 4200px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 360px" mode="forward" loop autoplay></dotlottie-wc>
     </Fragment>
   </Hero>
 
@@ -70,7 +70,10 @@ const metadata = {
     title="Why Stake?"
     subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network."
     stats={[
-      
+      { title: 'Downloads', amount: '182K' },
+      { title: 'Websites Launched', amount: '87' },
+      { title: 'User Ratings', amount: '4.8' },
+      { title: 'Satisfied Clients', amount: '116K' },
     ]}
   />
 
@@ -85,34 +88,35 @@ const metadata = {
       {
         title: 'Asset Managers',
         description:
-          ' Rey.Fan tailored staking strategies offer unparalleled reward opportunities for asset managers.',
-        icon: 'tabler:tax',
+          'Have a contemporary design that reflects current design trends and gives a professional impression.',
+        icon: 'tabler:artboard',
       },
       {
-        title: 'Marketplaces',
-        description: ' Provide your users with frictionless staking, earn rewards, for marketplaces and exchanges.',
-        icon: 'tabler:preplace',
+        title: 'Marketplaces & Exchanges',
+        description: 'Adapt seamlessly to different screen sizes and devices to ensure a consistent experience.',
+        icon: 'tabler:picture-in-picture',
       },
       {
         title: 'Custodians & Wallets',
         description:
-          'enables custodians and wallets to integrate staking solutions across established and emerging Proof-of-Stake.',
+          'Easily customizable, allowing users to adapt the design, colors, typography, and content to match their brand identity.',
+        icon: 'tabler:adjustments-horizontal',
       },
       {
         title: 'Fund Products',
-        description: 'Create digital asset fund products underpinned by comprehensive on-chain data sets.',
+        description: 'Optimized for speed to ensure a smooth user experience and favorable search engine rankings.',
         icon: 'tabler:rocket',
       },
       {
         title: 'Foundations',
         description:
-          'Rey.Fan expertise to launch your protocol and manage your treasury with strategic guidance and support .',
-          icon: 'tabler:fountain',
+          'Incorporate SEO best practices in template structure and code to improve visibility in search engine results.',
+        icon: 'tabler:arrows-right-left',
       },
       {
         title: 'Data Platforms',
-        description: 'Expand your data offering with Rey.Fan, providing your users a quantitative edge in a growing asset.',
-        icon: 'tabler:database-export',
+        description: 'The templates work seamlessly across various content management systems and website builders.',
+        icon: 'tabler:plug-connected',
       },
     ]}
   />
