--- a/src/pages/homes/staking.astro
+++ b/src/pages/homes/staking.astro
@@ -49,7 +49,7 @@ const metadata = {
 
     <Fragment slot="image">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 360px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/a20aa746-34eb-4e20-b07d-2840cc6c1a9c/p0pWyPvuCB.lottie" speed="1" style="width: 100%; height: 420px" mode="forward" loop autoplay></dotlottie-wc>
     </Fragment>
   </Hero>
 
@@ -70,10 +70,7 @@ const metadata = {
     title="Why Stake?"
     subtitle=" Staking is not an investment product. Rather, it enables token holders to earn rewards by delegating their tokens in order to validate transactions on the underlying blockchain, which helps ensure the security and integrity of the network."
     stats={[
-      { title: 'Downloads', amount: '182K' },
-      { title: 'Websites Launched', amount: '87' },
-      { title: 'User Ratings', amount: '4.8' },
-      { title: 'Satisfied Clients', amount: '116K' },
+     
     ]}
   />
 
@@ -92,9 +89,9 @@ const metadata = {
         icon: 'tabler:artboard',
       },
       {
-        title: 'Marketplaces & Exchanges',
+        title: 'Marketplaces',
         description: 'Adapt seamlessly to different screen sizes and devices to ensure a consistent experience.',
-        icon: 'tabler:picture-in-picture',
+        icon: 'tabler:replace',
       },
       {
         title: 'Custodians & Wallets',
